fixes equation alignment

--- a/src/components/feed-item.css
+++ b/src/components/feed-item.css
@@ -3,24 +3,10 @@
   color: var(--ui-type__color);
   letter-spacing: var(--ui-type__letter-spacing);
 
-  & [role='math'] {
-    overflow-x: auto;
-    overflow-y: hidden;
-    max-width: 100%;
-  }
-
-  & figure [role='math'] {
+  /* Mark this for deletion */
+  /* & figure [role='math'] {
     padding: 1em 0;
-  }
-
-  & [role='math'] math {
-    position: absolute;
-    left: -10000px;
-    top: auto;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-  }
+  } */
 
   & .card__content {
     width: 100%;
